Subida de archivos

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
 
 <body>
 
+    <!--<img src="http://localhost:3000/imagen/usuarios/5e96b700d59580096ab7fa94-995.jpeg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjp0cnVlLCJnb29nbGUiOmZhbHNlLCJfaWQiOiI1ZTk2YjcwMGQ1OTU4MDA5NmFiN2ZhOTQiLCJub21icmUiOiJ0ZXN0MSIsImVtYWlsIjoidGVzdDFAZ21haWwuY29tIiwiX192IjowLCJpbWciOiI1ZTk2YjcwMGQ1OTU4MDA5NmFiN2ZhOTQtOTk1LmpwZWcifSwiaWF0IjoxNTg4ODM2ODgyLCJleHAiOjE1ODkwMDk2ODJ9.nHK6yV1ieboriAKkJN9Bliw8yMsZs16hyeKMuQgfnmU"-->
+
     <a href="#" onclick="signOut();">Sign out</a>
     <script>
         function signOut() {
